# RaBitQ-Library

./: example.sh
include/rabitqlib/index/: estimator.hpp  ivf_rabitq_raw.cuh  ivf_rabitq_raw_cuvs.cuh
include/rabitqlib/index/ivf/: ivf.hpp
include/rabitqlib/utils/: buffer.hpp  rotator.hpp  space.hpp
sample/: CMakeLists.txt  ivf_rabitq_querying.cpp  ivf_rabitq_querying_parallel.cpp  ivf_rabitq_querying_raw.cpp  ivf_rabitq_querying_raw_cuvs.cpp  ivf_rabitq_raw.cu  ivf_rabitq_raw_cuvs.cu
